apache-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
spec:
  containers:
  - name: apache-container
    image: httpd
    ports:
    - containerPort: 80
