redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: webui
  name: redis-pod
spec:
  containers:
  - image: redis
    name: redis
