hello-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: LoadBalancer
  selector:
    app: hello-app
  ports:
    - name: tcp
      port: 8020
      targetPort: 80
