todo-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 5000
