my_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port: { number: 80 }
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port: { number: 80 }
      - path: /static            
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port: { number: 80 }
